2010-09-14  Sam Steingold  <sds@gnu.org>

	interface to the POSIX function nftw()
	* modules/syscalls/calls.c (FILE-TREE-WALK): add
	* modules/syscalls/posix.lisp (file-tree-walk) [unix]: export
	* modules/syscalls/configure.in: check for nftw and ftw.h

2010-09-14  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (parse-signature): accept :SECLASS and pass
	it to MAKE-SIGNATURE
	(defun-p): pass SEC to PARSE-SIGNATURE instead of ignoring it

2010-09-13  Sam Steingold  <sds@gnu.org>

	bundle ASDF2 as a module
	* Makefile.devel (update-asdf): new .PHONY target
	(pre-release): depend on it
	* modules/asdf: add (based on asdf 2.008)
	* makemake.in, unix/INSTALL: mention asdf in the docs

2010-09-14  Sam Steingold  <sds@gnu.org>

	* modules/clx/mit-clx/Makefile (clisp-module): depend on link.sh
	which is required by clisp-link.sh
	* modules/clx/mit-clx/link.sh (NEW_MODULES): add "clx"
	(NEW_FILES): one loop instead of two

2010-09-14  Sam Steingold  <sds@gnu.org>

	* clisp-link.in: support module which have no C component:
	build dll only if NEW_LIBS is non-empty

2010-09-02  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (ignore-check): warn about assigned but never read vars

2010-09-01  Sam Steingold  <sds@gnu.org>

	use gnulib sockets.m4 and socklen.m4 instead of the clisp ones
	* Makefile.devel (GNULIB_CORE): add socklen, sockets, close-hook
	* modules/rawsock/rawsock.c, stream.d, socket.di, win32.d:
	use socklen_t instead of CLISP_SOCKLEN_T
	* configure.in: use gl_SOCKETS instead of CL_SOCKET
	and gl_TYPE_SOCKLEN_T instead of CL_SOCKLEN_T
	* makemake.in: use LIBSOCKET instead of assuming everything is in LIBS

2010-09-01  Sam Steingold  <sds@gnu.org>

	use gnulib/host-cpu-c-abi
	* Makefile.devel (GNULIB_CORE): add host-cpu-c-abi
	* configure.in: use gl_HOST_CPU_C_ABI instead of CL_CANONICAL_HOST_CPU
	* makemake.in (host_cpu_c_abi): replaces host_cpu_abi
	* m4/general.m4 (CL_CACHE_EGREP_CPP, CL_SET_CPU_ABI)