@@ -1788,7 +1788,7 @@
           (when (and *load-compiling* *load-verbose* *compile-verbose*)
             (c-report-problems))))
       (loading-message (TEXT "Loaded file ~A") filename)
-      t)))
+      (truename filename))))
 (let ((sys::*current-source-file* "init"))
   (sys::check-redefinition 'load 'defun nil))
 
