@@ -952,7 +952,7 @@ T
     (prin1 `(ext:delete-directory ,d) s))
   (ensure-directories-exist d)
   (list (ext:probe-directory d)
-        (load n)
+        (string= n (pathname-name (load n)))
         (not (null (delete-file f)))
         (ext:probe-directory d)))
 #+clisp (T T T NIL)
@@ -967,7 +967,7 @@ T
   (ensure-directories-exist d)
   (setf (logical-pathname-translations "FOO") '(("*" "./*")))
   (list (ext:probe-directory d)
-        (load (ext:string-concat "FOO:" n))
+        (string= n (pathname-name (load (ext:string-concat "FOO:" n))))
         (not (null (delete-file f)))
         (ext:probe-directory d)))
 #+clisp (T T T NIL)
